--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "script-ext-html-webpack-plugin": "^1.8.5",
     "sinon": "^4.1.3",
     "sinon-chai": "^2.14.0",
+    "url-loader": "^0.6.2",
     "vue-loader": "^12.2.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.11",
